Restore Sorting visualizer docs in README.md and update CardGame docs